--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/environment"
         android:label="@string/app_name"
+        android:name=".FixMyHood"
         android:roundIcon="@drawable/environment"
         android:supportsRtl="true"
         android:theme="@style/Theme.FixMyHood"
